--- a/movie-quotes/movie-quotes/index.html
+++ b/movie-quotes/movie-quotes/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ghostbusters Quotes</title>
-		<link rel="stylesheet" type="text/css" href="resources/html_elements/css/styles.css">
+		<link rel="stylesheet" type="text/css" href="resources/styles.css">
 	</head>
 	<body>
 		<header>
