--- a/box-model/index.html
+++ b/box-model/index.html
@@ -29,36 +29,36 @@
 		</div>
 		<div class="row">
 			<div class="column">
-				<img src="resources/flour.jpg" alt="" id="small">
+				<img src="resources/flour.JPG" alt="" id="small">
 				<h5>Flour</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
 			<div class="column">
-				<img src="resources/seperate.jpg" alt="" id="small">
+				<img src="resources/seperate.JPG" alt="" id="small">
 				<h5>Seperating Eggs</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
 		</div>
 		<div class="row">
 			<div class="column">
-				<img src="resources/paste.jpg" alt="" id="small">
+				<img src="resources/paste.JPG" alt="" id="small">
 				<h5>Dough</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
 			<div class="column">
-				<img src="resources/strain.jpg" alt="" id="small">
+				<img src="resources/strain.JPG" alt="" id="small">
 				<h5>Custard</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
 		</div>
 		<div class="row">
 			<div class="column">
-				<img src="resources/eggtartfinish.jpg" alt="" id="small">
+				<img src="resources/eggtartfinish.JPG" alt="" id="small">
 				<h5>Setup</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
 			<div class="column">
-				<img src="resources/eggtartbaked.jpg" alt="" id="small">
+				<img src="resources/eggtartbaked.JPG" alt="" id="small">
 				<h5>Baking</h5>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.
 			</div>
