--- a/recipe-final/index.html
+++ b/recipe-final/index.html
@@ -40,8 +40,11 @@
 		<div class="button">
 			1
 		</div>
-		<div class="step">
-			In a large bowl, sprinkle yeast over barely warm water. Beat in honey, oil, 2 eggs, and salt. Add the flour one cup at a time, beating after each addition, graduating to kneading with hands as dough thickens. Knead until smooth and elastic and no longer sticky, adding flour as needed. Cover with a damp clean cloth and let rise for 1 ½ hours or until dough has doubled in bulk.
+		<div class="step" id="step1">
+			<p>In a large bowl, sprinkle yeast over barely warm water. Beat in honey, oil, 2 eggs, and salt. 
+			</p>
+			<p>Add the flour one cup at a time, beating after each addition, graduating to kneading with hands as dough thickens.</p>
+			<p>Knead until smooth and elastic and no longer sticky, adding flour as needed. Cover with a damp clean cloth and let rise for 1 ½ hours or until dough has doubled in bulk.</p>
 		</div>
 		<div class="button">
 			2
@@ -49,14 +52,14 @@
 		<div class="step">
 			Punch down the risen dough and turn out onto floured board. Divide in half and knead each half for five minutes or so, adding flour as needed to keep from getting sticky. 
 		</div>
-		<img src="resources/dough.jpg">
+		<img src="resources/dough.jpg"><br>
 		<div class="button">
 			3
 		</div>
 		<div class="step">
 			Divide each half into thirds and roll into long snake about 1½ inches in diameter. Pinch the ends of the three snakes together firmly and braid from middle. Either leave as braid or form into a round braided loaf by bringing ends together, curving braid into a circle, pinch ends together. 
 		</div>
-		<iframe width="310" height="175" src="https://www.youtube.com/embed/EB4NWC9SNBY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="310" height="175" src="https://www.youtube.com/embed/EB4NWC9SNBY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 		<div class="button">
 			4
 		</div>
@@ -66,8 +69,8 @@
 		<div class="button">
 			5
 		</div>
-		<div class="step">
-			Preheat oven to 375°F (190°C). <br><br>
+		<div class="step" id="short">
+			Preheat oven to 375°F (190°C).<br><br>
 		</div>
 		<div class="button">
 			6
@@ -75,7 +78,7 @@
 		<div class="step">
 			Beat the remaining egg and brush a generous amount over each braid.	
 		</div>
-		<img src="resources/paint.jpg">
+		<img src="resources/paint.jpg"><br>
 		<div class="button">
 			7
 		</div>
