--- a/recipe-final/index.html
+++ b/recipe-final/index.html
@@ -57,7 +57,7 @@
 			3
 		</div>
 		<div class="step">
-			Divide each half into thirds and roll into long snake about 1½ inches in diameter. Pinch the ends of the three snakes together firmly and braid from middle. Either leave as braid or form into a round braided loaf by bringing ends together, curving braid into a circle, pinch ends together. 
+			Divide each half into thirds and roll into long snake about 1½ inches in diameter. Pinch the ends of the three snakes together firmly and braid from middle. 
 		</div>
 		<iframe width="350" height="200" src="https://www.youtube.com/embed/EB4NWC9SNBY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 		<div class="button">
@@ -83,7 +83,7 @@
 			7
 		</div>
 		<div class="step">
-			Bake at 375°F (190°C) for about 40 minutes. Bread should have a nice hollow sound when thumped on the bottom. Cool on a rack for at least one hour before slicing.
+			<p>Bake at 375°F (190°C) for about 40 minutes. Bread should have a nice hollow sound when thumped on the bottom. </p> <p>Cool on a rack for at least one hour before slicing.</p>
 		</div>
 	</section>
 	<section id="variations">
@@ -98,7 +98,7 @@
 		2 tbsp sugar<br>
 		¼ cup milk to dissolve cocoa powder<br><br>
 
-		Instead of <div class="inline">STEP 3</div> mix together the chocolate filling. Divide each half into thirds and roll into a rectangles. Add the chocolate filling all the way to the sides of the dough on the right and left then roll up the dough into snakesabout 1½ inches in diameter. Pinch the ends of the three snakes together firmly and braid. 
+		Instead of <div class="inline">STEP 3</div> mix together the chocolate filling. Divide each half into thirds and roll into a rectangles. Add the chocolate filling all the way to the sides of the dough on the right and left then roll up the dough into snakesabout 1½ inches in diameter. Pinch the ends of the three snakes together firmly and braid.
 		<img class="space" src="resources/chocolate.jpg">
 		<br><br>
 		<h3>Braids</h3>
