--- a/postcards/responsive/slide3.html
+++ b/postcards/responsive/slide3.html
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>OTGW Postcards</title>
 	<link href="css/styles.css" rel="stylesheet">
-	<a href="slide2.html"></a>
+	<a href="index.html"></a>
 </head>
 <body>
-	<a href="slide2.html"></a>
+	<a href="index.html"></a>
 	<section>
-		<h1>Where is that frog-o-mine? Hold on my brother o-mine. I'll be back soon for your plan.</h1>
+		<h1>I'm sorry I got us lost, Wirt. Will you take care of Ronald for me. I've got to go. Goodbye, Wirt.</h1>
 		<h2>Greg</h2>
 	</section>
-	<img src="resources/image3.jpg">
-	<!-- image from Daily Motion https://s1.dmcdn.net/v/CmGZs1MVUm4u-0HPy/x1080 -->
+	<img src="resources/image1p2.jpg">
+	<!-- image from NY Times https://static01.nyt.com/images/2014/11/03/arts/GARDEN/GARDEN-articleLarge.jpg?quality=75&auto=webp&disable=upscale -->
 </body>
 </html>
