--- a/microsite/mockup/index.html
+++ b/microsite/mockup/index.html
@@ -22,6 +22,8 @@
 </head>
 <body>
 	<h2>Designer: Lucy Chen | Creative Director: Natalie Hench </h2>
+	<p>Chose two typefaces that I think really echos the feel of the Met Gala and the high fashion trend: IvyMode for headers and Gibson for main body text </p>
+	<p>I played around with using different features in my design: a drop bar for the navigation and a gallery of images at the bottom of the page.</p>
 	<h3>Main Page</h3>
 	<img src="resources/MacBook Pro - 1.png">
 	<h3>2019 Gala</h3>
