--- a/microsite/www/2017.html
+++ b/microsite/www/2017.html
@@ -19,7 +19,7 @@
 	<a href="2019.html"></a>
 </head>
 <body> 
-	<a id="nextpage" href="2018.html"></a>
+	<!-- <a id="nextpage" href="2018.html"></a> -->
  	
 	<section id="navigation">
 		<h2>MET GALA</h2>
