--- a/microsite/www/index.html
+++ b/microsite/www/index.html
@@ -10,12 +10,11 @@
 	<a href="2019.html"></a>
 </head>
 <body>
-	<a id="nextpage" href="2017.html"></a>
 	<section id="main">
 		<h1>Met Gala</h1>
-		<div id="left" class="big">2017 REI KAMAKUBO/ COMME DES GARÇONS </div>
-		<div id="center" class="big">2018 HEAVENLY BODIES</div>
-		<div id="right" class="big">2019 NOTES ON CAMP</div>
+		<div id="left" class="big"> <a class="page" href="2017.html">2017 REI KAMAKUBO/ COMME DES GARÇONS</a></div>
+		<div id="center" class="big"> <a class="page" href="2018.html">2018 HEAVENLY BODIES</a></div>
+		<div id="right" class="big"> <a class="page" href="2019.html">2019 NOTES ON CAMP </a></div>
 	</section>
 	<section id="text">
 		<h2>The Met Gala</h2>
