--- a/microsite/finished/2017.html
+++ b/microsite/finished/2017.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://use.typekit.net/wjd2ntp.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
 		$( document ).ready(function() {	
-			$(".controls").hover(function(){	
+			$(".controls").click(function(){	
 				$("#drawer").toggleClass("open");	
 					console.log("Toggled the class!");	
 			});
@@ -60,6 +61,7 @@
 	<section id="footer">
 		<br><br><h2>Sources</h2>
 		<p><a class="source" href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
+		<p><a class="source" href="https://www.vogue.co.uk/article/the-met-gala-2017-theme-comme-des-garcons">The Met Gala 2017 Theme: What You Need To Know</a></p>
 	</section>
 	
 </body>
