--- a/microsite/finished/2019.html
+++ b/microsite/finished/2019.html
@@ -3,14 +3,14 @@
 <head>
 	<title>Met Gala</title>
 	<link href="css/styles.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="https://use.typekit.net/wjd2ntp.css">
 	<link href="css/dropbar.css" rel="stylesheet">
 	<link href="css/gallery.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
 		$( document ).ready(function() {	
-			$(".controls").hover(function(){	
+			$(".controls").click(function(){	
 				$("#drawer").toggleClass("open");	
 					console.log("Toggled the class!");	
 			});
@@ -49,14 +49,17 @@
 	<section id="gallery">
 		<ul class="pgwSlider">
    			<li><img src="images/billy2.jpg"><span>Billy Porter wearing The Blonds</span></li>
-  			<li><img src="images/cardb.jpg" ><span>Cardi B</span></li>
-  			<li><img src="images/katy.jpg" ><span>Katy Perry</span></li>
-  			<li><img src="images/camp1.jpg" ><span>Ezra Miller</span></li>
+  			<li><img src="images/cardb.jpg" ><span>Cardi B wearing Thom Browne</span></li>
+  			<li><img src="images/katy.jpg" ><span>Katy Perry wearing Moschino</span></li>
+  			<li><img src="images/camp1.jpg" ><span>Ezra Miller wearing Burberry</span></li>
+  			<li><img src="images/ladygaga2.gif"><span>Lady Gaga wearing Maxwell</span></li>
+  			<li><img src="images/gigi2.jpeg"><span>Gigi Hadid wearing Michael Kors</span></li>
 		</ul>
 	</section>
 	<section id="footer">
 		<br><br><h2>Sources</h2>
 		<p><a href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
+		<p><a href="https://www.vogue.com/article/what-is-the-met-gala-everything-we-know">Met Gala 2019: Everything You Need to Know </a></p>
 	</section>
 </body>
 </html>
