--- a/microsite/finished/index.html
+++ b/microsite/finished/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Met Gala</title>
 	<link href="css/styles.css" rel="stylesheet">
-	
 	<link href="css/dropbar.css" rel="stylesheet">
 	<link href="css/gallery.css" rel="stylesheet">
+	<link href="css/mobile.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/wjd2ntp.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<a href="2017.html"></a>
@@ -28,9 +29,13 @@
 		<p>The Met Gala was established in 1948 by fashion publicist Eleanor Lambert as a way to raise money for the newly-founded Costume Institute and mark the opening of its annual exhibit. The first gala was a dinner and tickets were fifty dollars each. For the first few decades of its existence the gala was simply one of many annual benefits held for New York charitable institutions. Accordingly, the attendees of the early galas were almost entirely members of New York high society or the city's fashion industry. From 1948 to 1971, the event was held at venues including the Waldorf-Astoria, Central Park, and the Rainbow Room.</p>
 		<p>When Diana Vreeland became consultant to the Costume Institute in 1972, the Gala began to evolve into a more glamorous affair, although one that was still aimed at the societal set. The event started to become more celebrity-oriented with attendees like Rihanna, Diana Ross, and Cher intermixing with the city's elite. It was during the Vreeland years that the Gala was first held at the Met and that Gala themes were introduced.</p>
 	</section>
+	<section id="historyimages">
+		<img class="mainpage" src="images/warhol.jpg"> <span class="caption">Andy Warhol, Raquel Welch and journalist Daniela Morera at the Met Gala</span>
+		<img class="mainpage" src="images/eleanor.jpg"> <span class="caption">Eleanor Lambert, establisher of the Met Gala</span>
+	</section>
 	<section id="footer">
 		<br><br><h2>Sources</h2>
-		<p><a href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
+		<p><a class="source" href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
 	</section>
 </body>
 </html>
