--- a/microsite/finished/2018.html
+++ b/microsite/finished/2018.html
@@ -3,14 +3,14 @@
 <head>
 	<title>Met Gala</title>
 	<link href="css/styles.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="https://use.typekit.net/wjd2ntp.css">
 	<link href="css/dropbar.css" rel="stylesheet">
 	<link href="css/gallery.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
 		$( document ).ready(function() {	
-			$(".controls").hover(function(){	
+			$(".controls").click(function(){	
 				$("#drawer").toggleClass("open");	
 					console.log("Toggled the class!");	
 			});
@@ -51,11 +51,13 @@
   			<li><img src="images/rihanna.jpg" ><span>Rihanna wearing Maison Margiela by John Galliano</span></li>
   			<li><img src="images/blake.jpg" ><span>Blake Lively wearing Versace</span></li>
   			<li><img src="images/sza.jpg" ><span>Sza wearing Versace</span></li>
+  			<li><img src="images/lena.jpg" ><span>Lena Waithe wearing Carolina Herrara</span></li>
 		</ul>
 	</section>
 	<section id="footer">
 		<br><br><h2>Sources</h2>
 		<p><a href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
+		<p><a href="https://www.vogue.co.uk/article/met-gala-2018-details-revealed">Met Gala 2018: Everything You Need To Know</a></p>
 	</section>
 </body>
 </html>
