--- a/microsite/finished/2017.html
+++ b/microsite/finished/2017.html
@@ -27,6 +27,20 @@
 	<a href="2017.html"></a>
 	<a href="2018.html"></a>
 	<a href="2019.html"></a>
+	<style type="text/css">
+		#drawer.open .contents a:hover{
+			color: #bf0202;
+		}
+		#home:hover{
+			color: #bf0202;
+		}
+		#drawer button:hover{
+			color: #bf0202;
+		}
+		.source:hover{
+			text-decoration-color: #bf0202;
+		}
+	</style>
 </head>
 <body> 
 	<!-- <a id="home" href="index.html"></a> -->
@@ -43,11 +57,16 @@
 		</div>
 	</section>
 	<section id="text">
-		<h2>2017: REI KAMAKUBO/COMME DES GARÇONS</h2>
-		<p>This year's theme, for both the Metropolitan Museum of Art’s annual Costume Institute exhibition and 2017 Met Gala, was Rei Kawakubo/Comme des Garçons.</p>
-		<p>First predicted by Suzy Menkes during Paris Fashion Week (following the presence of both Anna Wintour, editor-in-chief of American Vogue, and Andrew Bolton, curator of the Metropolitan Museum of Art’s Costume Institute, at the Comme des Garçons show), Rei Kawakubo is be the first living designer since Yves Saint Laurent in 1983 to be the sole subject of the Met's blockbuster fashion exhibit.</p>
-		<p>Rei Kawakubo is one of the most important and influential designers of the past 40 years," Bolton commented to Vogue.com. "By inviting us to rethink fashion as a site of constant creation, recreation, and hybridity, she has defined the aesthetics of our time.</p>
-		<p>Kawakubo acted as honorary chair alongside Katy Perry, Pharrell Williams - who launched a fragrance in collaboration with Comme des Garçons in 2014 - and Anna Wintour.</p>
+		<h2 class="page1">2017: REI KAMAKUBO/COMME DES GARÇONS</h2>
+		<div id="body">
+			<p>This year's theme, for both the Metropolitan Museum of Art’s annual Costume Institute exhibition and 2017 Met Gala, was Rei Kawakubo/Comme des Garçons.</p>
+			<p>First predicted by Suzy Menkes during Paris Fashion Week (following the presence of both Anna Wintour, editor-in-chief of American Vogue, and Andrew Bolton, curator of the Metropolitan Museum of Art’s Costume Institute, at the Comme des Garçons show), Rei Kawakubo is be the first living designer since Yves Saint Laurent in 1983 to be the sole subject of the Met's blockbuster fashion exhibit.</p>
+			<p>Rei Kawakubo is one of the most important and influential designers of the past 40 years," Bolton commented to Vogue.com. "By inviting us to rethink fashion as a site of constant creation, recreation, and hybridity, she has defined the aesthetics of our time.</p>
+			<p>Kawakubo acted as honorary chair alongside Katy Perry, Pharrell Williams - who launched a fragrance in collaboration with Comme des Garçons in 2014 - and Anna Wintour.</p>
+		</div>
+		<div id="historyimages">
+			<img class="mainpage" src="images/comme.jpg"> <span class="caption">Rei Kawakubo</span>
+		</div>
 	</section>
  	<section id="gallery">
 		<ul class="pgwSlider">
