--- a/microsite/finished/2018.html
+++ b/microsite/finished/2018.html
@@ -26,6 +26,20 @@
 	<a href="2017.html"></a>
 	<a href="2018.html"></a>
 	<a href="2019.html"></a>
+	<style type="text/css">
+		#drawer.open .contents a:hover{
+			color: #f0d316;
+		}
+		#home:hover{
+			color: #f0d316;
+		}
+		#drawer button:hover{
+			color: #f0d316;
+		}
+		.source:hover{
+			text-decoration-color: #f0d316;
+		}
+	</style>
 </head>
 <body>
 	<!-- <a id="home" href="index.html"></a> -->
@@ -41,9 +55,14 @@
 		</div>
 	</section>
 	<section id="text">
-		<h2>2018: HEAVENLY BODIES</h2>
-		<p>Heavenly Bodies: Fashion and the Catholic Imagination featured some 40 Vatican vestments and accessories spanning 15 papacies, which curator Andrew Bolton is said to have visited at least 10 times to secure pieces which have never left the Vatican's possession before. Items such as Pope Benedict XV's white silk cape embroidered with gold thread and the pointed bishop's hat of Pope Leo XIII, will go on display alongside pieces by Coco Chanel, who was educated by nuns, John Galliano, Cristóbal Balenciaga and Donatella Versace, who is a sponsor of the exhibition.</p>
-		<p>The Met Gala 2018 theme is cited as the Met's most controversial yet, owing to the positioning of these fashion garments alongside sacred artefacts. Bolton, however, has defended his curation: "Some might consider fashion to be an unfitting or unseemly medium by which to engage with ideas about the sacred or the divine, but dress is central to any discussion about religion," he said at a press conference in Rome. "It affirms religious allegiances and, by extension, it asserts religious differences."</p>
+		<h2 class="page2">2018: HEAVENLY BODIES</h2>
+		<div id="body">
+			<p>Heavenly Bodies: Fashion and the Catholic Imagination featured some 40 Vatican vestments and accessories spanning 15 papacies, which curator Andrew Bolton is said to have visited at least 10 times to secure pieces which have never left the Vatican's possession before. Items such as Pope Benedict XV's white silk cape embroidered with gold thread and the pointed bishop's hat of Pope Leo XIII, will go on display alongside pieces by Coco Chanel, who was educated by nuns, John Galliano, Cristóbal Balenciaga and Donatella Versace, who is a sponsor of the exhibition.</p>
+			<p>The Met Gala 2018 theme is cited as the Met's most controversial yet, owing to the positioning of these fashion garments alongside sacred artefacts. Bolton, however, has defended his curation: "Some might consider fashion to be an unfitting or unseemly medium by which to engage with ideas about the sacred or the divine, but dress is central to any discussion about religion," he said at a press conference in Rome. "It affirms religious allegiances and, by extension, it asserts religious differences."</p>
+		</div>
+		<div id="historyimages">
+			<img class="mainpage" src="images/heavenlyexhibit.jpg"> <span class="caption">Heavenly Bodies Met Exhibition</span>
+		</div>
 	</section>
 	<section id="gallery">
 		<ul class="pgwSlider">
@@ -52,12 +71,13 @@
   			<li><img src="images/blake.jpg" ><span>Blake Lively wearing Versace</span></li>
   			<li><img src="images/sza.jpg" ><span>Sza wearing Versace</span></li>
   			<li><img src="images/lena.jpg" ><span>Lena Waithe wearing Carolina Herrara</span></li>
+  			<li><img src="images/heavenly.jpg" ><span>Madonna wearing Jean Paul Gaultier</span></li>
 		</ul>
 	</section>
 	<section id="footer">
 		<br><br><h2>Sources</h2>
-		<p><a href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
-		<p><a href="https://www.vogue.co.uk/article/met-gala-2018-details-revealed">Met Gala 2018: Everything You Need To Know</a></p>
+		<p><a class="source" href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
+		<p><a class="source" href="https://www.vogue.co.uk/article/met-gala-2018-details-revealed">Met Gala 2018: Everything You Need To Know</a></p>
 	</section>
 </body>
 </html>
