--- a/microsite/finished/index.html
+++ b/microsite/finished/index.html
@@ -12,6 +12,17 @@
 	<a href="2017.html"></a>
 	<a href="2018.html"></a>
 	<a href="2019.html"></a>
+	<style type="text/css">
+		#drawer.open .contents a:hover{
+			color: #f0d316;
+		}
+		#home:hover{
+			color: #f0d316;
+		}	
+		.source:hover{
+			text-decoration-color:#f0d316;
+		}
+	</style>
 </head>
 <body>
 	<section id="main">
@@ -22,17 +33,23 @@
 	</section>
 	<section id="text">
 		<h2>The Met Gala</h2>
+		<div id="body">
 		<p>The Met Gala, formally called the Costume Institute Gala and also known as the Met Ball, is an annual fundraising gala for the benefit of the Metropolitan Museum of Art's Costume Institute in New York City. It marks the opening of the Costume Institute's annual fashion exhibit. Each year's event celebrates the theme of that year's Costume Institute exhibition, and the exhibition sets the tone for the formal dress of the night, since guests are expected to choose their fashion to match the theme of the exhibit.</p>
 		<p>The Met Gala was established in 1948 as a way to raise money for the newly-founded Costume Institute and mark the opening of its annual exhibit. The first Gala was a midnight dinner and tickets were fifty dollars each. Based upon the legacy left by former Vogue editor-in-chief Diana Vreeland as "special consultant" to the Costume Institute, since 1973 the Met Gala has become well known as a luxurious, blockbuster event and is considered "the jewel in New York City's social crown".</p>
 		<p>The Gala is widely regarded as among the most prominent and most exclusive social events in the world. It is also one of the biggest fundraising nights in New York City, with $9M USD raised in 2013 and a record of $12M USD the following year. The Met Gala is one of the most notable sources of funding for the Institute, with contributions anticipated to surpass $200M USD in total after the 2019 event since Anna Wintour's assuming the chairmanship of the Institute in 1995.</p>
 		<h2>History</h2>
 		<p>The Met Gala was established in 1948 by fashion publicist Eleanor Lambert as a way to raise money for the newly-founded Costume Institute and mark the opening of its annual exhibit. The first gala was a dinner and tickets were fifty dollars each. For the first few decades of its existence the gala was simply one of many annual benefits held for New York charitable institutions. Accordingly, the attendees of the early galas were almost entirely members of New York high society or the city's fashion industry. From 1948 to 1971, the event was held at venues including the Waldorf-Astoria, Central Park, and the Rainbow Room.</p>
 		<p>When Diana Vreeland became consultant to the Costume Institute in 1972, the Gala began to evolve into a more glamorous affair, although one that was still aimed at the societal set. The event started to become more celebrity-oriented with attendees like Rihanna, Diana Ross, and Cher intermixing with the city's elite. It was during the Vreeland years that the Gala was first held at the Met and that Gala themes were introduced.</p>
+		</div>
+		<div id="historyimages">
+		<img class="mainpage" src="images/warhol.jpg"> <span class="caption">Andy Warhol, Raquel Welch and Daniela Morera at the Met Gala</span>
+		<img class="mainpage" src="images/eleanor.jpg"> <span class="caption">Eleanor Lambert, establisher of the Met Gala</span>
+		</div>
 	</section>
-	<section id="historyimages">
+	<!-- <section id="historyimages">
 		<img class="mainpage" src="images/warhol.jpg"> <span class="caption">Andy Warhol, Raquel Welch and journalist Daniela Morera at the Met Gala</span>
 		<img class="mainpage" src="images/eleanor.jpg"> <span class="caption">Eleanor Lambert, establisher of the Met Gala</span>
-	</section>
+	</section> -->
 	<section id="footer">
 		<br><br><h2>Sources</h2>
 		<p><a class="source" href="https://en.wikipedia.org/wiki/Met_Gala">Met Gala Wikipedia </a></p>
