--- a/microsite/finished/2019.html
+++ b/microsite/finished/2019.html
@@ -77,7 +77,7 @@
   			<li><img src="images/camp1.jpg" ><span>Ezra Miller wearing Burberry</span></li>
   			<li><img src="images/ladygaga2.gif"><span>Lady Gaga wearing Maxwell</span></li>
   			<li><img src="images/gigi2.jpeg"><span>Gigi Hadid wearing Michael Kors</span></li>
-  			<li><img src="images/jared.jpeg"><span>Jared Leto wearing Gucci</span></li>
+  			<li><img src="images/jared.jpg"><span>Jared Leto wearing Gucci</span></li>
 		</ul>
 	</section>
 	<section id="footer">
